fix: benchmark desc wrap (#30)

--- a/src/benchmark/ProgressBar.module.scss
+++ b/src/benchmark/ProgressBar.module.scss
@@ -40,7 +40,7 @@
 }
 
 .desc {
-  min-width: 84px;
+  min-width: 100px;
   color: var(--rp-c-text-2);
   font-size: 12px;
   margin-left: 16px;
